@@ -168,7 +168,7 @@ class ExamUserIntegrationTest extends AbstractProgrammingIntegrationLocalCILocal
         assertThat(exam.getExamUsers()).hasSize(4);
         for (ExamUser examUser : exam.getExamUsers()) {
             assertThat(examUser.getStudentImagePath()).isNotNull();
-            String requestUrl = String.format("%s%s", ARTEMIS_FILE_PATH_PREFIX, examUser.getStudentImagePath());
+            String requestUrl = "%s%s".formatted(ARTEMIS_FILE_PATH_PREFIX, examUser.getStudentImagePath());
             assertThat(request.getFile(requestUrl, HttpStatus.OK)).isNotEmpty();
         }
 
@@ -186,7 +186,7 @@ class ExamUserIntegrationTest extends AbstractProgrammingIntegrationLocalCILocal
         assertThat(exam.getExamUsers()).hasSize(4);
         for (ExamUser examUser : exam.getExamUsers()) {
             assertThat(examUser.getStudentImagePath()).isNotNull();
-            String requestUrl = String.format("%s%s", ARTEMIS_FILE_PATH_PREFIX, examUser.getStudentImagePath());
+            String requestUrl = "%s%s".formatted(ARTEMIS_FILE_PATH_PREFIX, examUser.getStudentImagePath());
             assertThat(request.getFile(requestUrl, HttpStatus.OK)).isNotEmpty();
         }
     }
@@ -314,7 +314,7 @@ class ExamUserIntegrationTest extends AbstractProgrammingIntegrationLocalCILocal
         assertThat(signedUsers).hasSize(1);
         for (var user : signedUsers) {
             assertThat(user.getSigningImagePath()).isNotNull();
-            String requestUrl = String.format("%s%s", ARTEMIS_FILE_PATH_PREFIX, user.getSigningImagePath());
+            String requestUrl = "%s%s".formatted(ARTEMIS_FILE_PATH_PREFIX, user.getSigningImagePath());
             assertThat(request.getFile(requestUrl, HttpStatus.OK)).isNotEmpty();
         }
     }
@@ -568,6 +568,23 @@ class ExamUserIntegrationTest extends AbstractProgrammingIntegrationLocalCILocal
         List<UserForRegistrationDTO> result = request.getList(searchUrl(course1.getId(), exam1.getId()), HttpStatus.OK, UserForRegistrationDTO.class,
                 searchParams(TEST_PREFIX + "student", 0, 2));
         assertThat(result).hasSize(2);
+    }
+
+    @Test
+    @WithMockUser(username = TEST_PREFIX + "instructor1", roles = "INSTRUCTOR")
+    void testSearchUsersForExamRegistration_paginationIsStableAcrossPages() throws Exception {
+        // Regression test for issue #13069: consecutive pages must form a stable, non-overlapping partition of the
+        // matches, so no student shuffles between pages or disappears and becomes impossible to add to the exam. The
+        // precise ordering guarantee lives in the repository and is unit-tested in UserRepositoryStableSearchSortUnitTest;
+        // here we verify it end-to-end through the registration endpoint.
+        List<UserForRegistrationDTO> combined = new ArrayList<>();
+        combined.addAll(request.getList(searchUrl(course1.getId(), exam1.getId()), HttpStatus.OK, UserForRegistrationDTO.class, searchParams(TEST_PREFIX + "student", 0, 2)));
+        combined.addAll(request.getList(searchUrl(course1.getId(), exam1.getId()), HttpStatus.OK, UserForRegistrationDTO.class, searchParams(TEST_PREFIX + "student", 1, 2)));
+
+        assertThat(combined).extracting(UserForRegistrationDTO::login).doesNotHaveDuplicates().containsExactlyInAnyOrder(TEST_PREFIX + "student1", TEST_PREFIX + "student2",
+                TEST_PREFIX + "student3", TEST_PREFIX + "student4");
+        // The pages are served in ascending id order, so concatenating page 0 and page 1 yields a globally sorted list.
+        assertThat(combined).extracting(UserForRegistrationDTO::id).isSorted();
     }
 
     @Test
